# Launcher-Curseforge

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  example.ccip  go.mod  go.sum  main.go  main_windows.go
.github/workflows/: release.yml
src/: main.rs
