[package]
name = "launcher-curseforge"
version = "2.1.1"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"
description = "Integrates the Curseforge Modpack installation button to any MultiMC based launcher"
readme = "README.md"
repository = "https://github.com/shaybox/launcher-curseforge"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
furse = "1.5"
rayon = "1.7"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
url = "2.3"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1"
winreg = "0.50"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1

[package.metadata.bundle]
identifier = "com.shaybox.launcher-curseforge"
linux_mime_types = ["x-scheme-handler/curseforge"]
linux_exec_args = "%u"
osx_url_schemes = ["curseforge"]
